--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <form action=""> 
-        <input id="submit" type="submit">
+        <input id="submit" type="submit" disabled="disabled">
         <input id="alert" type="text">
        
     </form>
